# magic8ball

./: .flake8  READMD.md  app-logic.md  pyproject.toml
.github/workflows/: python-app.yml
src/magic8ball/: __main__.py  flow.py  logic.py
src/magic8ball.egg-info/: PKG-INFO  SOURCES.txt
src/oracle/: __main__.py  flow.py  logic.py
tests/: test_initial.py
tests/flow/: test_answers.py  test_quit.py  test_termination_after_too_many_questions_asked.py
tests/logic/: test_logic.py  test_secret_probability.py
