[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "magic8ball"
version = "0.1.0"
description = "A simple Magic 8 Ball command-line application."
authors = [
    { name="elb", email="elb@chem.ku.dk" }
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 0 - Planning",
]

[project.scripts]
magic8ball = "magic8ball.__main__:main"
